--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 
 # rccthemes
 
+[![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/oc1lojo/rccthemes?branch=master&svg=true)](https://ci.appveyor.com/project/oc1lojo/rccthemes)
+
 RCC themes, scales and geoms for [ggplot2](https://ggplot2.tidyverse.org).
 
 The longterm goal is to provide ggplot2 themes, scales and geoms that adhere to the graphic rules at Regional Cancer Centers (RCC) in Sweden. 
