--- a/README.Rmd
+++ b/README.Rmd
@@ -49,8 +49,9 @@ library(ggplot2)
 library(rccthemes)
 
 theme_set(theme_minimal())
+scale_colour_discrete <- scale_colour_rcc
+scale_fill_discrete <- scale_fill_rcc
 
 ggplot(mpg, aes(displ, hwy, colour = class)) +
-  geom_point() +
-  scale_colour_rcc()
+  geom_point()
 ```
