--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,7 @@ knitr::opts_chunk$set(
 
 # rccthemes
 
+[![Travis build status](https://travis-ci.org/oc1lojo/rccthemes.svg?branch=master)](https://travis-ci.org/oc1lojo/rccthemes)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/github/oc1lojo/rccthemes?branch=master&svg=true)](https://ci.appveyor.com/project/oc1lojo/rccthemes)
 
 RCC themes, scales and geoms for [ggplot2](https://ggplot2.tidyverse.org).
