--- a/vignettes/scales-intro-sv.Rmd
+++ b/vignettes/scales-intro-sv.Rmd
@@ -79,7 +79,7 @@ Det kan vara smidigt att ange RCC-skalorna som standardskalor i början av ett a
 library(ggplot2)
 library(rccthemes)
 
-theme_set(theme_minimal())
+theme_set(theme_minimal()) # ggplot2::theme_minimal, inte ett RCC-tema
 scale_colour_discrete <- scale_colour_rcc
 scale_fill_discrete <- scale_fill_rcc
 ```
