Lägg till länk till RCC:s hemsida

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(
 
 RCC themes, scales and geoms for [ggplot2](https://ggplot2.tidyverse.org).
 
-The longterm goal is to provide ggplot2 themes, scales and geoms that adhere to the graphic rules at Regional Cancer Centers (RCC) in Sweden. 
+The longterm goal is to provide ggplot2 themes, scales and geoms that adhere to the graphic rules at [Regional Cancer Centers (RCC)](https://www.cancercentrum.se) in Sweden. 
 Currently, RCC scales are implemented.
 
 ## Installation
