Ändra till enklare installation som standardförslag

--- a/README.Rmd
+++ b/README.Rmd
@@ -26,7 +26,8 @@ Currently, RCC scales are implemented.
 
 ```{r, eval = FALSE}
 # install.packages("devtools")
-devtools::install_bitbucket("cancercentrum/rccthemes", build_op = NULL)
+devtools::install_bitbucket("cancercentrum/rccthemes")
+# devtools::install_bitbucket("cancercentrum/rccthemes", build_op = NULL) # also vignette
 ```
 
 ## Usage
