--- a/README.Rmd
+++ b/README.Rmd
@@ -25,9 +25,11 @@ Currently, RCC scales are implemented.
 ## Installation
 
 ```{r, eval = FALSE}
-# install.packages("devtools")
-devtools::install_bitbucket("cancercentrum/rccthemes")
-# devtools::install_bitbucket("cancercentrum/rccthemes", build_op = NULL) # also vignette
+if (!requireNamespace("remotes"))
+  install.packages("remotes")
+
+remotes::install_bitbucket("cancercentrum/rccthemes")
+# remotes::install_bitbucket("cancercentrum/rccthemes", build_vignettes = TRUE) # also vignette
 ```
 
 ## Usage
