--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,8 @@
 ---
-output: github_document
+output:
+  md_document:
+    variant: markdown
 ---
-
-<!-- README.md is generated from README.Rmd. Please edit that file. -->
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
