--- a/vignettes/scales-intro-sv.Rmd
+++ b/vignettes/scales-intro-sv.Rmd
@@ -29,11 +29,11 @@ library(rccthemes)
 Visa färgerna i paletten.
 
 ```{r}
-scales::show_col(rcc_pal()(10))
+scales::show_col(rcc_pal()(12))
 ```
 
-Jfr
-https://bitbucket.org/cancercentrum/rccshiny/src/1.7.1/R/rcc2PlotLine.R#lines-120
+<!-- Jfr -->
+<!-- https://bitbucket.org/cancercentrum/rccshiny/src/1.7.1/R/rcc2PlotLine.R#lines-120 -->
 
 # RCC grafiska skalor
 
