--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ remotes::install_bitbucket("cancercentrum/rccthemes")
 library(ggplot2)
 library(rccthemes)
 
-theme_set(theme_minimal()) # ggplot2::theme_minimal, not an RCC theme
+theme_set(ggplot2::theme_minimal())
 scale_colour_discrete <- scale_colour_rcc
 scale_fill_discrete <- scale_fill_rcc
 
