--- a/vignettes/scales-intro-sv.Rmd
+++ b/vignettes/scales-intro-sv.Rmd
@@ -32,8 +32,8 @@ Visa färgerna i paletten.
 scales::show_col(rcc_pal()(12))
 ```
 
-<!-- Jfr -->
-<!-- https://bitbucket.org/cancercentrum/rccshiny/src/1.7.1/R/rcc2PlotLine.R#lines-120 -->
+Jfr
+https://bitbucket.org/cancercentrum/rccshiny/src/1.10.0/R/rcc2PlotLine.R#lines-120
 
 # RCC grafiska skalor
 
