Update status badge for R-CMD-check on GitHub Actions

--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
 
 # rccthemes
 
-[![R-CMD-check](https://github.com/oc1lojo/rccthemes/workflows/R-CMD-check/badge.svg)](https://github.com/oc1lojo/rccthemes/actions)
+[![R-CMD-check](https://github.com/cancercentrum/rccthemes/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/cancercentrum/rccthemes/actions/workflows/R-CMD-check.yaml)
 [![AppVeyor build status](https://ci.appveyor.com/api/projects/status/qgkdgjy8rc8e60x7/branch/master?svg=true)](https://ci.appveyor.com/project/oc1lojo/rccthemes/branch/master)
 
 RCC themes, scales and geoms for [ggplot2](https://ggplot2.tidyverse.org).
